# ctypes-example

./: .flake8  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
cpp/include/: foo.h
cpp/src/: foo.cc
python/: test_foo.py
